added fixes to pathfind

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,9 +27,9 @@
             </p>
         </div>
         <div class="nav-links">
-            <div class="nav-link"><a class="animated-button victoria-two" href="http://localhost:5000/sort">Sorting Visualizer</a></div>
-            <div class="nav-link"><a class="animated-button victoria-two" href="http://localhost:5000/search">Searching Visualizer</a></div>
-            <div class="nav-link"><a class="animated-button victoria-two" href="http://localhost:5000/find">PathFinding Visualizer</a></div>
+            <div class="nav-link"><a class="animated-button victoria-two" href="http://localhost:5000/sortVisualizer">Sorting Visualizer</a></div>
+            <div class="nav-link"><a class="animated-button victoria-two" href="http://localhost:5000/searchVisualizer">Searching Visualizer</a></div>
+            <div class="nav-link"><a class="animated-button victoria-two" href="http://localhost:5000/pathFinder">PathFinding Visualizer</a></div>
         </div>
     </main>
 </body>
