--- a/views/Pathfind.ejs
+++ b/views/Pathfind.ejs
@@ -10,7 +10,7 @@
     <title>Algorithm Visualizer</title>
 </head>
 <body>
-    <div class="nav-back"><a href="http://localhost:5000/"><i class="fas fa-arrow-left"></i></a></div>
+    <div class="nav-back"><a href="https://algo-visualizer242.herokuapp.com/"><i class="fas fa-arrow-left"></i></a></div>
   
     <header id="main-header">
         <h2 class="heading">PathFinding Visualizer</h2>
@@ -19,11 +19,6 @@
                <input type="range" min="0" max="600" step="20" value="100">
                 <p class="delay-indicator">Delay: </p>
             </div>
-            <!-- <div class="size-input">
-           
-               <input type="range" min="30" max="100" value="40" step="10" >
-               <p class="size-indicator">Size:</p>
-           </div> -->
            <div class="control-element">
                <select id="algo-selector">
                    <option value="Bfs">Breadth First Search(BFS)</option>
