--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -13,7 +13,7 @@
     <title>Code Editor</title>
 </head>
 <body>
-    <div class="nav-back"><a href="http://localhost:5000/"><i class="fas fa-arrow-left"></i></a></div>
+    <div class="nav-back"><a href="https://algo-visualizer242.herokuapp.com/"><i class="fas fa-arrow-left"></i></a></div>
     <header id="main-header">
       <h1>Code Playground-Write and Execute your code</h1>
     </header>
