--- a/views/sort.ejs
+++ b/views/sort.ejs
@@ -10,7 +10,7 @@
     <title>Algorithm Visualizer</title>
 </head>
 <body>
-    <div class="nav-back"><a href="https://algo-visualizer242.herokuapp.com/><i class="fas fa-arrow-left"></i></a></div>
+    <div class="nav-back"><a href="https://algo-visualizer242.herokuapp.com/"><i class="fas fa-arrow-left"></i></a></div>
   <header id="main-header">
      <h2 class="heading">Sorting Visualizer</h2>
      <div class="controls">
