--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
 <body>
     <header id="main-header">
       <div class="text-editor-btn animate_animated animate__fadeInRight">
-        <a href="http://localhost:5000/editor"> Try Text Editor </a>
+        <a href="https://algo-visualizer242.herokuapp.com/editor"> Try Text Editor </a>
       </div>
     </header>
     <main>
